...
      decoration: BoxDecoration(
        color: Theme.of(context).colorScheme.surface,
      ),
      child: SizedBox(
        height: widget.height,
        child: GestureDetector(
          key: const Key('pacts-panel-drag-handle'),
          onTap: widget.onTap,
          behavior: HitTestBehavior.opaque,
          onVerticalDragStart: (d) {
            _dragStartSize = widget.controller.size;
            _dragStartGlobalY = d.globalPosition.dy;
          },
...
